# Avalanche

./: .gitignore  Cargo.toml
app/: Cargo.toml
app/src/: main.rs
crates/extra/ash_window/: Cargo.toml
crates/extra/renderdoc/: Cargo.toml
crates/extra/renderdoc/src/: handles.rs  version.rs
crates/libs/engine/: Cargo.toml
crates/libs/engine/src/: core.rs  extra.rs  lib.rs
crates/libs/engine/src/core/: event.rs  instance.rs  task.rs
crates/libs/engine/src/core/task/: main.rs
crates/libs/engine/src/extra/: renderdoc.rs
crates/libs/hlvk/: Cargo.toml
crates/libs/hlvk/src/: barrier.rs  buffer.rs  command.rs  context.rs  descriptor.rs  device.rs  image.rs  instance.rs  layout.rs  lib.rs  physical_device.rs  query.rs  queue.rs  raster.rs  sampler.rs  shader.rs  surface.rs  swapchain.rs  util.rs
crates/libs/hlvk/src/raster/: vertex_stream.rs
crates/libs/rendering/: Cargo.toml
crates/libs/rendering/src/: context.rs  extract.rs  graph.rs  lib.rs  mock.rs  preclude.rs  prelude.rs  present.rs  resource.rs  runner.rs
crates/libs/rendering/src/extra/: renderdoc.rs
crates/libs/rendering/src/extract/: frame.rs
crates/libs/rendering/src/graph/: app.rs  context.rs  edge.rs  error.rs  graph.rs  node.rs  node_slot.rs
crates/libs/rendering/src/present/: window.rs
crates/libs/rendering/src/resource/: buffer.rs  extract_param.rs  image.rs  resource_macro.rs
crates/libs/rendering/src/runner/: system.rs
crates/libs/utils/: Cargo.toml
crates/libs/utils/src/: const_compute.rs  getset.rs  id_generator.rs  lib.rs  memory.rs  version.rs
crates/libs/window/: Cargo.toml
crates/libs/window/src/: event.rs  global.rs  lib.rs  manager.rs
src/: ash_window.rs  core.rs  lib.rs  main.rs
src/core/: event_loop.rs  renderer_trait.rs  renderer_types.rs  renderer_vulkan.rs  scene.rs  window_manager.rs
src/core/renderer_vulkan/: base.rs  buffer.rs  ray_tracing.rs  utility.rs
src/core/scene/: obj_mesh.rs  utility.rs
