[package]
name = "avalanche"
version = "0.1.0"
edition = "2021"
authors = [
    "DarcJC <i@darc.pro>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.3"
winit = "0.29.3"
once_cell = "1.18.0"
raw-window-handle = "0.6.0"
tobj = "4.0.0"
async-trait = "0.1.74"
anyhow = "1.0.75"
enumflags2 = "0.7.8"

[dependencies.async-std]
version = "1.12.0"
features = ["attributes", "once_cell"]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal = "0.3"
