[workspace]
members = [
    "crates/libs/*",
    "app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
    "DarcJC <i@darc.pro>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
avalanche-utils = { path = "crates/libs/utils" }
avalanche-hlvk = { path = "crates/libs/hlvk" }
avalanche-window = { path = "crates/libs/window" }
ash-window = { path = "crates/libs/ash_window" }

log = "0.4"
ash = "0.37.3"
winit = "0.29.3"
once_cell = "1.18.0"
raw-window-handle = "0.6.0"
tobj = "4.0.0"
async-trait = "0.1.74"
anyhow = "1.0.75"
enumflags2 = "0.7.8"

syn = { version = "2.0", features = ["full"] }
quote = "1.0"

[workspace.dependencies.async-std]
version = "1.12.0"
features = ["attributes", "once_cell"]

[workspace.dependencies.gpu-allocator]
version = "0.24.0"
default-features = false
features = ["vulkan"]
