[workspace]
members = [
    "crates/libs/*",
    "app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
    "DarcJC <i@darc.pro>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
avalanche-utils = { path = "crates/libs/utils" }
avalanche-hlvk = { path = "crates/libs/hlvk" }
avalanche-window = { path = "crates/libs/window" }
avalanche-engine = { path = "crates/libs/engine" }
ash-window = { path = "crates/libs/ash_window" }

log = "0.4"
env_logger = "0.10.1"
ash = { version = "0.37.3", features = ["linked", "loaded"] }
winit = "0.29.3"
once_cell = "1.18.0"
raw-window-handle = "0.6.0"
tobj = "4.0.0"
async-trait = "0.1.74"
anyhow = "1.0.75"
chrono = "0.4.31"
bitflags = "2.4.1"

syn = { version = "2.0", features = ["full"] }
quote = "1.0"

bevy_ecs = { version = "0.12.1", features = ["multi-threaded"] }
bevy_reflect = { version = "0.12.1", features = ["default"] }
bevy_reflect_derive = "0.12.1"
bevy_app = { version = "0.12.1", features = ["bevy_reflect"] }
bevy_core = { version = "0.12.1", features = [] }
bevy_time = { version = "0.12.1", features = ["default"] }

[workspace.dependencies.async-std]
version = "1.12.0"
features = ["attributes", "once_cell"]

[workspace.dependencies.gpu-allocator]
version = "0.24.0"
default-features = false
features = ["vulkan"]
