[package]
name = "avalanche-app"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std.workspace = true
avalanche-window.workspace = true
avalanche-engine.workspace = true

[features]
trace = ["avalanche-engine/trace"]
trace_chrome = ["avalanche-engine/trace_chrome"]
trace_tracy = ["avalanche-engine/trace_tracy"]
