[package]
name = "avalanche-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
env_logger.workspace = true
bevy_ecs.workspace = true
bevy_reflect.workspace = true
bevy_reflect_derive.workspace = true
bevy_app.workspace = true
bevy_core.workspace = true
bevy_time.workspace = true
avalanche-window.workspace = true
chrono.workspace = true
