[package]
name = "avalanche-rendering"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
ash.workspace = true
log.workspace = true
env_logger.workspace = true
bevy_ecs.workspace = true
bevy_reflect.workspace = true
bevy_reflect_derive.workspace = true
bevy_app.workspace = true
bevy_core.workspace = true
bevy_time.workspace = true
bevy_utils.workspace = true
bevy_log.workspace = true
avalanche-window.workspace = true
avalanche-hlvk.workspace = true
avalanche-utils.workspace = true
chrono.workspace = true
anyhow.workspace = true
renderdoc.workspace = true
arc-swap.workspace = true

[features]
trace = []
renderdoc = []
