[package]
name = "avalanche-window"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell.workspace = true
async-std.workspace = true
avalanche-utils.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
ash-window.workspace = true
anyhow.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal = "0.4"
