[package]
name = "avalanche-window"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
once_cell.workspace = true
async-std.workspace = true
avalanche-utils.workspace = true
avalanche-hlvk.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
ash-window.workspace = true
anyhow.workspace = true

bevy_ecs.workspace = true
bevy_reflect.workspace = true
bevy_reflect_derive.workspace = true
bevy_app.workspace = true
bevy_core.workspace = true
bevy_time.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal = "0.4"
